# bili-shadowreplay

./: .dockerignore  .editorconfig  .gitignore  .markdownlint.json  .pre-commit-config.yaml  ACCOUNT_ID_COMPATIBILITY.md  API_UPDATE_SUMMARY.md  CLAUDE.md  COMPILE_FIX.md  CONTRIBUTING  Cargo.toml  DOUYIN_ACCOUNT_UPDATE.md  Dockerfile  LICENSE  MODIFICATION_SUMMARY.md  README.md  VIDEO_EDITING_TOOLS.md  _typos.toml  build.ps1  cliff.toml  docker_compose.yaml  ffmpeg_setup.ps1  index.html  index_clip.html  index_live.html  live_index.html  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.js  test_merge.sh  tsconfig.json  upload.html  vite.config.ts
.cursor/rules/: ai-features.mdc  build-deployment.mdc  database-data.mdc  frontend-development.mdc  project-overview.mdc  rust-backend.mdc  streaming-recording.mdc
.devcontainer/: Dockerfile  devcontainer.json
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: check.yml  lint.yml  main.yml  package.yml  pages.yml
.helix/: languages.toml
doc/cursor/: README.md
doc/cursor/recorder-update-entries-fix/: BUG_FIX_PANIC.md  README.md  RECORDER_FLOW_DIAGRAM.md
docs/: index.md
docs/.vitepress/: config.ts
docs/development/architecture/: overview.md
docs/development/backend/: database.md  recorder-manager.md
docs/development/frontend/: agent.md  invoker.md  stores.md
docs/getting-started/: configuration.md  ffmpeg.md  installation.md
docs/usage/: faq.md
libs/api-collection/: Cargo.toml
libs/api-collection/src/: errors.rs  general.rs  lib.rs
libs/api-collection/src/bilibili/: account.rs  general.rs  live.rs  mod.rs  upload.rs
libs/api-collection/src/bilibili/upload/: response.rs
libs/danmaku-stream/: Cargo.toml
libs/hls-recorder/: Cargo.toml
libs/hls-stream/: Cargo.toml
libs/utils/: Cargo.toml
public/shaka-player/: controls.css  controls.css.map  shaka-player.ui.debug.externs.js  shaka-player.ui.js  shaka-player.ui.map  youtube-theme.css
scripts/: bump.cjs
src/: App.svelte  AppClip.svelte  AppLive.svelte  AppUpload.svelte  env.d.ts  live_main.ts  main_clip.ts  main_live.ts  styles.css  upload.ts
src-tauri/: .gitignore  Cargo.toml  Conf.toml  config.example.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json  tauri.windows.cuda.conf.json  tauri.windows.openblas.conf.json  tree.md
src-tauri/capabilities/: migrated.json
src-tauri/crates/danmu_stream/: Cargo.toml
src-tauri/crates/danmu_stream/examples/: bilibili.rs  douyin.rs
src-tauri/crates/danmu_stream/src/: danmu_stream.rs  http_client.rs  lib.rs  provider.rs
src-tauri/crates/danmu_stream/src/provider/: bilibili.rs  douyin.rs  kuaishou.rs  mod.rs
src-tauri/crates/danmu_stream/src/provider/bilibili/: dannmu_msg.rs  interact_word.rs  pack.rs  send_gift.rs  stream.rs  super_chat.rs
src-tauri/crates/danmu_stream/src/provider/douyin/: messages.rs
src-tauri/crates/danmu_stream/src/provider/kuaishou/: messages.rs
src-tauri/crates/hls_stream/: Cargo.toml
src-tauri/crates/hls_stream/src/: lib.rs  segment.rs  stream.rs
src-tauri/crates/hls_stream/src/provider/: bilibili.rs  douyin.rs  mod.rs
src-tauri/crates/recorder/: Cargo.toml
src-tauri/crates/recorder/src/: account.rs  downloader.rs  entry.rs  entry_store.rs  errors.rs  events.rs  lib.rs  recorder.rs  storage.rs  traits.rs  user_agent_generator.rs
src-tauri/crates/recorder/src/core/: flv_recorder.rs  hls_recorder.rs  mod.rs  playlist.rs  stream_info.rs
src-tauri/crates/recorder/src/ffmpeg/: general.rs  mod.rs  playlist.rs
src-tauri/crates/recorder/src/utils/: mod.rs  user_agent_generator.rs
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  archive_migration.rs  config.rs  constants.rs  danmu2ass.rs  database.rs  db.rs  ffmpeg.rs  http_server.rs  main.rs  migration.rs  playlist.rs  progress_event.rs  progress_manager.rs  progress_reporter.rs  recorder.rs  recorder_manager.rs  state.rs  subtitle_generator.rs  tray.rs
src-tauri/src/api/: bilibili.rs  errors.rs
src-tauri/src/api/bilibili/: response.rs
src-tauri/src/database/: account.rs  message.rs  mod.rs  record.rs  recorder.rs  task.rs  video.rs
src-tauri/src/ffmpeg/: general.rs  hwaccel.rs  mod.rs  playlist.rs
src-tauri/src/handlers/: account.rs  config.rs  macros.rs  message.rs  mod.rs  recorder.rs  task.rs  utils.rs  video.rs  video_editing.rs
src-tauri/src/http_server/: api_server.rs  mod.rs  websocket.rs
src-tauri/src/jianying/: mod.rs
src-tauri/src/migration/: migration_methods.rs  mod.rs
src-tauri/src/progress/: mod.rs  progress_manager.rs  progress_reporter.rs
src-tauri/src/recorder/: bilibili.rs  danmu.rs  douyin.rs  entry.rs  errors.rs  mod.rs  recorder_manager.rs  stream.rs  traits.rs  user_agent_generator.rs
src-tauri/src/recorder/bilibili/: api.rs  client.rs  danmu.rs  errors.rs  profile.rs  response.rs  stream.rs
src-tauri/src/recorder/douyin/: api.rs  client.rs  response.rs  stream_info.rs
src-tauri/src/recorder/huya/: client.rs  errors.rs  extractor.rs  mod.rs
src-tauri/src/static_server/: mod.rs
src-tauri/src/subtitle_generator/: mod.rs  powerlive.rs  whisper.rs  whisper_cpp.rs  whisper_online.rs
src-tauri/src/task/: mod.rs
src-tauri/src/webhook/: events.rs  mod.rs  poster.rs
src-tauri/tests/video/: h_test.m4s  init.m4s  segment.m4s
src/lib/: AIMessage.svelte  About.svelte  Account.svelte  BSidebar.svelte  ClipFromImportedDialog.svelte  CoverEditor.svelte  DouyinIcon.svelte  HumanMessage.svelte  Image.svelte  ImportVideoDialog.svelte  MarkerPanel.svelte  Messages.svelte  Player.svelte  ProcessingMessage.svelte  Room.svelte  RoomList.svelte  Setting.svelte  SubtitleStyleEditor.svelte  Summary.svelte  TitleBar.svelte  ToolMessage.svelte  TypeSelect.svelte  VideoPreview.svelte  db.ts  interface.ts  invoker.ts
src/page/: AI.svelte  About.svelte  Account.svelte  Archive.svelte  Clip.svelte  Messages.svelte  Room.svelte  Setting.svelte  Summary.svelte  Task.svelte
test_videos/: concat_test1.txt  concat_test2.txt
(+74 files in other folders)
