[workspace]
members = ["crates/danmu_stream"]
resolver = "2"

[package]
name = "bili-shadowreplay"
version = "2.11.3"
description = "BiliBili ShadowReplay"
authors = ["Xinrea"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
danmu_stream = { path = "crates/danmu_stream" }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json", "multipart"] }
serde_derive = "1.0.158"
serde = "1.0.158"
sysinfo = "0.32.0"
m3u8-rs = "5.0.3"
async-std = "1.12.0"
async-ffmpeg-sidecar = "0.0.1"
chrono = { version = "0.4.24", features = ["serde"] }
toml = "0.7.3"
custom_error = "1.9.2"
regex = "1.7.3"
tokio = { version = "1.27.0", features = ["process"] }
platform-dirs = "0.3.0"
pct-str = "1.2.0"
md5 = "0.7.0"
hyper = { version = "0.14", features = ["full"] }
dashmap = "6.1.0"
urlencoding = "2.1.3"
log = "0.4.22"
simplelog = "0.12.2"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
rand = "0.8.5"
base64 = "0.21"
mime_guess = "2.0"
async-trait = "0.1.87"
whisper-rs = "0.14.2"
hound = "3.5.1"
uuid = { version = "1.4", features = ["v4"] }
axum = { version = "0.7", features = ["macros", "multipart"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
futures-core = "0.3"
futures = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
clap = { version = "4.5.37", features = ["derive"] }
url = "2.5.4"
srtparse = "0.2.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
cuda = ["whisper-rs/cuda"]
headless = []
default = ["gui"]
gui = [
    "tauri",
    "tauri-plugin-single-instance",
    "tauri-plugin-dialog",
    "tauri-plugin-shell",
    "tauri-plugin-fs",
    "tauri-plugin-http",
    "tauri-plugin-sql",
    "tauri-utils",
    "tauri-plugin-os",
    "tauri-plugin-notification",
    "tauri-plugin-deep-link",
    "fix-path-env",
    "tauri-build",
]

[dependencies.tauri]
version = "2"
features = ["protocol-asset", "tray-icon"]
optional = true

[dependencies.tauri-plugin-single-instance]
version = "2"
optional = true
features = ["deep-link"]

[dependencies.tauri-plugin-dialog]
version = "2"
optional = true

[dependencies.tauri-plugin-shell]
version = "2"
optional = true

[dependencies.tauri-plugin-fs]
version = "2"
optional = true

[dependencies.tauri-plugin-http]
version = "2"
optional = true

[dependencies.tauri-plugin-sql]
version = "2"
optional = true
features = ["sqlite"]

[dependencies.tauri-utils]
version = "2"
optional = true

[dependencies.tauri-plugin-os]
version = "2"
optional = true

[dependencies.tauri-plugin-notification]
version = "2"
optional = true

[dependencies.tauri-plugin-deep-link]
version = "2"
optional = true

[dependencies.fix-path-env]
git = "https://github.com/tauri-apps/fix-path-env-rs"
optional = true

[build-dependencies.tauri-build]
version = "2"
features = []
optional = true

[target.'cfg(windows)'.dependencies]
whisper-rs = { version = "0.14.2", default-features = false }

[target.'cfg(darwin)'.dependencies.whisper-rs]
version = "0.14.2"
features = ["metal"]
