[package]
name = "danmu_stream"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
brotli = "8.0.1"
custom_error = "1.9.2"
flate2 = "1.1.2"
futures-util = "0.3.31"
md5 = "0.7.0"
pct-str = "2.0.0"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["json"] }
scroll = "0.13.0"
scroll_derive = "0.13.0"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = "1.45.0"
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
url = "2.5.4"
log = "0.4.20"
