[package]
name = "danmu_stream"
version = "0.1.0"
edition = "2021"

[lib]
name = "danmu_stream"
path = "src/lib.rs"

[[example]]
name = "bilibili"
path = "examples/bilibili.rs"

[[example]]
name = "douyin"
path = "examples/douyin.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.27", features = ["native-tls"] }
futures-util = "0.3"
prost = "0.14"
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
url = "2.4"
md5 = "0.8"
regex = "1.9"
deno_core = "0.355"
pct-str = "2.0"
thiserror = "2.0"
flate2 = "1.0"
scroll = "0.13"
scroll_derive = "0.13"
brotli = "8.0"
http = "1.0"
rand = "0.9"
urlencoding = "2.1"
gzip = "0.1.2"
hex = "0.4.3"
async-trait = "0.1"
uuid = { workspace = true}

[build-dependencies]
tonic-build = "0.14"
