[package]
name = "recorder"
version = "0.1.0"
edition = "2021"

[lib]
name = "recorder"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
hls_stream.workspace = true
log = "0.4"
md5 = "0.7"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "sync", "time"] }
tokio-util = { version = "0.7", features = ["io"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
env_logger = "0.11"
tokio-test = "0.4"
