[package]
name = "recorder"
version = "0.1.0"
edition = "2021"

[lib]
name = "recorder"
path = "src/lib.rs"

[dependencies]
danmu_stream = { path = "../danmu_stream" }
async-trait = "0.1.89"
rand = "0.9.2"
chrono = "0.4.42"
tokio = "1.48.0"
reqwest = { workspace = true}
pct-str = "2.0.0"
serde_json = "1.0.145"
serde = "1.0.228"
regex = "1.12.2"
deno_core = "0.355"
uuid = "1.18.1"
serde_derive = "1.0.228"
thiserror = "2.0.17"
log = "0.4.28"
sanitize-filename = "0.6.0"
m3u8-rs = "6.0.0"
async-ffmpeg-sidecar = "0.0.3"
md5 = "0.8.0"
